# torchinfo

./: .cirun.yml  .deepsource.toml  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CITATION.cff  LICENSE  README.md  conftest.py  manual_test.py  profile.txt  profiler.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  setup.py
.github/workflows/: test.yml
fixtures/: __init__.py  genotype.py  models.py  tmva_net.py
scripts/: install-hooks  install-hooks.bash  post-commit  post-commit.bash  pre-commit  pre-commit.bash  pre-push  run-tests  run-tests.bash  uninstall-hooks  uninstall-hooks.bash
src/: torchsummary.py  torchsummaryX.py
tests/: colab_gpu_test.ipynb  complex_test.ipynb  conftest.py  depth_test.py  exceptions_test.py  formatting_test.py  gpu_test.py  half_precision_test.py  jupyter_test.ipynb  output_test.py  torchinfo_test.py  torchinfo_xl_test.py
tests/fixtures/: genotype.py  models.py  tmva_net.py  torchversion.py
tests/test_output/: ascii_only.out  autoencoder.out  basic_per_summary.out  basic_summary.out  batch_size_optimization.out  bert.out  categorical_distribution_output.out  cnn_module_list.out  compressai.out  container.out  containers.out  custom_parameter.out  device.out  device_parallelism.out  dict_parameters_1.out  dict_parameters_2.out  dict_parameters_3.out  dict_with_none_value.out  dict_with_string_value.out  edgecase_input_output_model.out  empty_module.out  empty_module_list.out  eval_order_doesnt_matter.out  exception.out  fasterrcnn.out  flan_t5_small.out  formatting_options.out  forward_pass_exception.out  frozen_layers.out  genotype.out  google.out  groups.out  hide_recursive_layers.out  hide_recursive_layers_outside_loop.out  highly_nested_dict_model.out  huggingface.out  input_size_possibilities.out  input_tensor.out  is_trainable_column.out  jit.out  (+54 more)
torchinfo/: __init__.py  enums.py  formatting.py  layer_info.py  model_statistics.py  torchinfo.py
torchsummary/: __init__.py  formatting.py  layer_info.py  model_statistics.py  old_version.py  torchsummary.py  torchsummaryX.py
torchsummary_build/: build.py  pipbuild  pipbuild.py  requirements-dev.txt  setup.py
unit_test/: exceptions_test.py  jupyter_test.ipynb  output_test.py  test_X.py  tests_X.py  torchinfo_test.py  torchsummary_test.py
unit_test/test_output/: basic_summary.out  container.out  dict_input.out  empty_module.out  exception.out  frozen_layers.out  lstm.out  resnet152.out  single_input.out  single_input_all.out  single_input_batch_dim.out
