[project]
name = "torch-summary"
version = "1.1.1"
description = "Model summary in PyTorch, based off of the original torchsummary."
author = "Tyler Yep <tyep@stanford.edu>"
license = "MIT"
readme = "README.md"
python = "^3.6"
homepage = "https://github.com/tyleryep/torch-summary"
repository = "https://github.com/tyleryep/torch-summary"
documentation = "https://github.com/tyleryep/torch-summary"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Requirements
[dependencies]
Click = "^7.0"

[dev-dependencies]
black = { version = "^18.3-alpha.0", python = "^3.6" }

[scripts]
poetry = "infer_pyproject.cli:main"

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target_version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''