[metadata]
name = torchinfo
version = 1.4.4
description = Model summary in PyTorch, based off of the original torchsummary.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tyleryep/torchinfo
author = Tyler Yep @tyleryep
author_email = tyep10@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = torch pytorch torchsummary torch-summary summary keras deep-learning ml torchinfo torch-info visualize model statistics layer

[options]
packages = torchinfo
python_requires = >=3.6

[mypy]
strict = True
ignore_missing_imports = True
implicit_reexport = True
allow_untyped_calls = True

[pylint.MASTER]
extension-pkg-whitelist = torch

[pylint.MESSAGES CONTROL]
disable =
    missing-function-docstring,
    too-many-instance-attributes,
    too-many-arguments,
    too-many-locals,
    arguments-differ,
    invalid-name,
    no-member,
    keyword-arg-before-vararg,
    isinstance-second-argument-not-valid-type,
    abstract-method,
    fixme,
    broad-except,
    unsubscriptable-object,  # TODO: Remove when Optional is fixed in Python 3.9

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203,F401
