[metadata]
name = torchinfo
version = attr: torchinfo.__version__
description = Model summary in PyTorch, based off of the original torchsummary.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tyleryep/torchinfo
author = Tyler Yep @tyleryep
author_email = tyep@cs.stanford.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords = torch pytorch torchsummary torch-summary summary keras deep-learning ml torchinfo torch-info visualize model statistics layer stats

[options]
packages = torchinfo
python_requires = >=3.7
include_package_data = True

[options.package_data]
torchinfo = py.typed

[mypy]
strict = True
implicit_reexport = True
enable_error_code = ignore-without-code

[pylint.main]
evaluation = 10.0 - ((float(5 * error + warning + refactor + convention + info) / statement) * 10)

[pylint.MESSAGES CONTROL]
extension-pkg-whitelist = torch
enable =
    useless-suppression,
    deprecated-pragma,
    use-symbolic-message-instead,
disable =
    missing-module-docstring,
    missing-function-docstring,
    too-many-instance-attributes,
    too-many-arguments,
    too-many-branches,
    too-many-locals,
    invalid-name,
    line-too-long,  # Covered by flake8
    no-member,
    fixme,
    duplicate-code,

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203,F401
